syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.pact.consumer";
option java_outer_classname = "Consumer";
option objc_class_prefix = "HLW";

package br.com.zup.pact.consumer;

service CartService {
  rpc getAll (EmptyRequest) returns (stream ProductResponse) {}
}

message EmptyRequest {}

message ProductResponse {
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  string paymentMethod = 5;
}