syntax = "proto3";

option java_multiple_files = true;
package br.com.zup.pact.shopping.cart.consumer.resource;

message EmptyRequest {}

message CartResponse {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

service CartService {
  rpc getProducts (EmptyRequest) returns (stream CartResponse) {}
}
